indivProba was added. Better lay-out of output .pIndividuals() stores data in this.indivProba and in this.indivProbaDevi No argument is given when pIndividuals is invoked! Also, chanceTable now mentions deviations.

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -10,3 +10,8 @@ Things left to do....
 
 - improve lay-out: integrate deviations in the table
 
+- in selectBestCombinations:
+  only add a vector if the inner product is more than ....
+  (otherwise, the matrix becomes nearly singular)
+
+
